@@ -1,7 +1,7 @@
 <?php
 /***************************************************************************
- *   Copyright (C) 2006 by Konstantin V. Arkhipov                          *
- *   voxus@onphp.org                                                       *
+ *   Copyright (C) 2006 by Anton E. Lebedevich                             *
+ *   noiselist@pochta.ru                                                   *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -12,7 +12,19 @@
 /* $Id$ */
 
 	/**
-	 * @ingroup Helpers
+	 * @ingroup Flow
 	**/
-	abstract class AbstractProtoClass extends Singleton {/*_*/}
+	class EditCommand implements EditorCommand 
+	{
+		public function run(Prototyped $subject, Form $form, HttpRequest $request)
+		{
+			FormUtils::getValuesFrom($subject, $form);
+			
+			if ($object = $form->getValue('id')) {
+				FormUtils::getValuesFrom($object, $form);
+			}
+			
+			return ModelAndView::create();
+		}
+	}
 ?>
